Added database-guard to allow the user to reset the data-base rather than crash the app, if something goes wrong with migrations